fix: scrollbar showing on the `totally-real-app-mount-react-native-winjs-why-do-people-even-do-this` division on chromium based browsers

--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ body {
     background-color: #181825;
     min-width: 420px;
     min-height: 69px;
-    overflow-y: scroll;
 
     border-radius: 2ex;
 
